[gd_scene load_steps=5 format=3 uid="uid://bp2hmb4k2yylo"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_lfbqj"]
[ext_resource type="Texture2D" uid="uid://lbxvijj11df4" path="res://assets/CrossCursor.png" id="2_yrx6t"]

[sub_resource type="InputEventKey" id="InputEventKey_n6x5n"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_ja0ea"]
events = [SubResource("InputEventKey_n6x5n")]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lfbqj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="OptionsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="SaveButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="CrossTexturebutton" type="TextureButton" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
shortcut = SubResource("Shortcut_ja0ea")
texture_normal = ExtResource("2_yrx6t")
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/Buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/Buttons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/Buttons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/Buttons/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/CrossTexturebutton" to="." method="_on_cross_texturebutton_pressed"]
